# giraffe

./: Cargo.toml  README.md
src/: blending.rs  defaults.rs  giraffe.rs  giraffe_lib.rs  main.rs  mutation.rs  options.rs  simulation.rs  solution_space.rs  statistics.rs  traits.rs  world.rs
