[package]
name = "giraffe"
version = "0.1.0"
authors = ["Chris Wilhelm <chris.wilhelm@gmail.com>"]

include = ["src/**/*.rs"]

[dependencies]
gnuplot = "*"
kiss3d = { git = "https://github.com/sebcrozet/kiss3d" }
nalgebra = "0.8.*"
rand = "*"
statistical = "*"
glfw-sys = "3.1.3"
docopt = "*"
rustc-serialize = "0.3"
